--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,13 @@ flask==2.0.1
 click==8.1.3
 
 # Data visualization
-matplotlib==3.4.3
+matplotlib==3.7.2
 seaborn==0.11.2
 
 # Database
 sqlalchemy==1.4.23
 psycopg2==2.9.1
+pandas==2.0.3
 
 # Testing
 pytest==7.1.3
