--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Basic utilities
 requests==2.26.0
 boto3==1.24.87
+numpy==1.21.2
 
 # Web development
 flask==2.0.1
@@ -24,3 +25,9 @@ black==22.3.0
 
 # Code linting
 pylint==2.15.3
+
+# Rust based linter
+ruff==0.0.284
+nbval==0.10.0
+nbqa==1.7.0
+
